# mchost24-api-python

./: .gitignore  README.md  mchost24.py  pyproject.toml  requirements.txt  setup.py
mchost24/: __init__.py  api.py
src/mchost24/: __main__.py  api.py
